@@ -6,11 +6,161 @@
 
 BOOST_AUTO_TEST_SUITE( dictionary )
 
-//BOOST_AUTO_TEST_CASE( test_get_special_word )
-//{
-//    BOOST_FAIL( "Test is not ready yet" );
-//}
+/*******************************************************************
+*
+*	DictEntry
+*
+********************************************************************/
 
+BOOST_AUTO_TEST_CASE( test_DictEntry_add )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+BOOST_AUTO_TEST_CASE( test_DictEntry_remove )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+BOOST_AUTO_TEST_CASE( test_DictEntry_get_forward_weight )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+BOOST_AUTO_TEST_CASE( test_DictEntry_get_backward_weight )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+
+/*******************************************************************
+*
+*	WordIndexer
+*
+********************************************************************/
+
+
+BOOST_AUTO_TEST_CASE( test_WordIndexer_ctor )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+BOOST_AUTO_TEST_CASE( test_WordIndexer_add )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+BOOST_AUTO_TEST_CASE( test_WordIndexer_remove )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+BOOST_AUTO_TEST_CASE( test_WordIndexer_get )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+BOOST_AUTO_TEST_CASE( test_WordIndexer_find_prefixes )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+
+/*******************************************************************
+*
+*	Dictionary
+*
+********************************************************************/
+
+/*****************   Word   *****************/
+BOOST_AUTO_TEST_CASE( test_Dictionary_add_word )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+BOOST_AUTO_TEST_CASE( test_Dictionary_remove_word )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+BOOST_AUTO_TEST_CASE( test_Dictionary_get_word )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+BOOST_AUTO_TEST_CASE( test_Dictionary_get_word_const )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+BOOST_AUTO_TEST_CASE( test_Dictionary_find_prefixes )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+BOOST_AUTO_TEST_CASE( test_Dictionary_words )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+/*****************   Tag   *****************/
+
+BOOST_AUTO_TEST_CASE( test_Dictionary_init_tag_dict )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+BOOST_AUTO_TEST_CASE( test_Dictionary_add_tag_weight )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+BOOST_AUTO_TEST_CASE( test_Dictionary_remove_tag_weight )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+BOOST_AUTO_TEST_CASE( test_Dictionary_get_tag_weight )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+BOOST_AUTO_TEST_CASE( test_Dictionary_tags )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+
+/*****************   Tag transit   *****************/
+BOOST_AUTO_TEST_CASE( test_Dictionary_get_tag_transit_index )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+BOOST_AUTO_TEST_CASE( test_Dictionary_add_tag_transit_weight_3_args )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+BOOST_AUTO_TEST_CASE( test_Dictionary_add_tag_transit_weight_2_args )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+BOOST_AUTO_TEST_CASE( test_Dictionary_remove_tag_transit_weight )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+BOOST_AUTO_TEST_CASE( test_Dictionary_get_tag_transit_weight )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+BOOST_AUTO_TEST_CASE( test_Dictionary_tags_transit )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
 
 BOOST_AUTO_TEST_SUITE_END()
 
