@@ -6,11 +6,88 @@
 
 BOOST_AUTO_TEST_SUITE( serialization )
 
-//BOOST_AUTO_TEST_CASE( test_get_special_word )
-//{
-//    BOOST_FAIL( "Test is not ready yet" );
-//}
+/*******************************************************************
+*
+*				namespace openclas::ict
+*
+********************************************************************/
 
+BOOST_AUTO_TEST_CASE( test_Serialization_ICT_get_special_word_tag )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+BOOST_AUTO_TEST_CASE( test_Serialization_ICT_get_tag_from_pos_value )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+BOOST_AUTO_TEST_CASE( test_Serialization_ICT_get_gb2312_array )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+BOOST_AUTO_TEST_CASE( test_Serialization_ICT_load_from_dct )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+BOOST_AUTO_TEST_CASE( test_Serialization_ICT_load_words_from_dct )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+BOOST_AUTO_TEST_CASE( test_Serialization_ICT_load_words_transit_from_dct )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+BOOST_AUTO_TEST_CASE( test_Serialization_ICT_load_tags_from_ctx )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+BOOST_AUTO_TEST_CASE( test_Serialization_ICT_load_from_file )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+BOOST_AUTO_TEST_CASE( test_Serialization_ICT_save_words_to_dct )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+BOOST_AUTO_TEST_CASE( test_Serialization_ICT_save_words_transit_to_dct )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+BOOST_AUTO_TEST_CASE( test_Serialization_ICT_save_tags_to_ctx )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+BOOST_AUTO_TEST_CASE( test_Serialization_ICT_save_to_file )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+
+/*******************************************************************
+*
+*				namespace openclas
+*
+********************************************************************/
+
+BOOST_AUTO_TEST_CASE( test_Serialization_save_to_file )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
+
+BOOST_AUTO_TEST_CASE( test_Serialization_load_from_file )
+{
+    BOOST_FAIL( "Test is not ready yet" );
+}
 
 BOOST_AUTO_TEST_SUITE_END()
 
